// Code generated by sgen.exe,2022-05-18 09:13:09. DO NOT EDIT.
// versions: v1.0.0
// 如果确实需要修改,请修改后改文件名,可以移除文件名中的.gen,以防下次生成覆盖

syntax = "proto3";

package service;
option go_package = ".;protosService";

//来源于数据表
message SceneIntelligenceTask {


    // @inject_tag: json:"id" gorm:"default:唯一主键;comment:唯一主键;size:19;"
    int64 id = 100;


    // @inject_tag: json:"intelligenceId" gorm:"default:智能场景Id;comment:智能场景Id;size:19;"
    int64 intelligenceId = 101;


    // @inject_tag: json:"taskImg" gorm:"default:任务图片(产品图片、智能图片、功能图标）;comment:任务图片(产品图片、智能图片、功能图标）;size:255;"
    string taskImg = 102;


    // @inject_tag: json:"taskDesc" gorm:"default:任务描述;comment:任务描述;size:50;"
    string taskDesc = 103;


    // @inject_tag: json:"taskType" gorm:"default:任务类型（=1 延时 =2 设备执行 =3 场景开关）;comment:任务类型（=1 延时 =2 设备执行 =3 场景开关）;size:10;"
    int32 taskType = 104;


    // @inject_tag: json:"objectId" gorm:"default:对象ID（设备Id、场景Id）;comment:对象ID（设备Id、场景Id）;size:50;"
    string objectId = 105;


    // @inject_tag: json:"objectDesc" gorm:"default:对象的标题或者描述（设备名称、场景名称）;comment:对象的标题或者描述（设备名称、场景名称）;size:50;"
    string objectDesc = 106;


    // @inject_tag: json:"funcKey" gorm:"default:执行功能Key;comment:执行功能Key;size:50;"
    string funcKey = 107;


    // @inject_tag: json:"funcDesc" gorm:"default:冗余：功能描述;comment:冗余：功能描述;size:50;"
    string funcDesc = 108;


    // @inject_tag: json:"funcValue" gorm:"default:;comment:;size:50;"
    string funcValue = 109;

}

message SceneIntelligenceTaskFilter {


    // @inject_tag: json:"id" gorm:"default:唯一主键;comment:唯一主键;size:19;"
    int64 id = 100;


    // @inject_tag: json:"intelligenceId" gorm:"default:智能场景Id;comment:智能场景Id;size:19;"
    int64 intelligenceId = 101;


    // @inject_tag: json:"taskImg" gorm:"default:任务图片(产品图片、智能图片、功能图标）;comment:任务图片(产品图片、智能图片、功能图标）;size:255;"
    string taskImg = 102;


    // @inject_tag: json:"taskDesc" gorm:"default:任务描述;comment:任务描述;size:50;"
    string taskDesc = 103;


    // @inject_tag: json:"taskType" gorm:"default:任务类型（=1 延时 =2 设备执行 =3 场景开关）;comment:任务类型（=1 延时 =2 设备执行 =3 场景开关）;size:10;"
    int32 taskType = 104;


    // @inject_tag: json:"objectId" gorm:"default:对象ID（设备Id、场景Id）;comment:对象ID（设备Id、场景Id）;size:50;"
    string objectId = 105;


    // @inject_tag: json:"objectDesc" gorm:"default:对象的标题或者描述（设备名称、场景名称）;comment:对象的标题或者描述（设备名称、场景名称）;size:50;"
    string objectDesc = 106;


    // @inject_tag: json:"funcKey" gorm:"default:执行功能Key;comment:执行功能Key;size:50;"
    string funcKey = 107;


    // @inject_tag: json:"funcDesc" gorm:"default:冗余：功能描述;comment:冗余：功能描述;size:50;"
    string funcDesc = 108;


    // @inject_tag: json:"funcValue" gorm:"default:;comment:;size:50;"
    string funcValue = 109;

}

message SceneIntelligenceTaskListRequest {
    SceneIntelligenceTask query = 101;
    int64 page = 102;
    int64 pageSize = 103;
    string orderKey = 104;
    string orderDesc = 105;
    string searchKey = 106;
}

message SceneIntelligenceTaskResponse {
    int32 code = 101;
    string message = 102;
    int64 total = 103;
    repeated SceneIntelligenceTask data = 104;
}

message SceneIntelligenceTaskUpdateFieldsRequest {
    repeated string fields = 101;
    SceneIntelligenceTask data = 102;
}


// 表模型主键，只能是整数或字符串，若生成错误，请检查数据库表主键是否正确。支持组合主键
message SceneIntelligenceTaskPrimarykey {

    int64 id = 100;
}

message SceneIntelligenceTaskBatchDeleteRequest {
    repeated SceneIntelligenceTaskPrimarykey keys = 101;
}